build.gradleにOpen Rewrite用の定義を追加2

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id 'org.openrewrite.rewrite'
+	id 'org.openrewrite.rewrite' version '5.10.0'
 }
 
 group = 'com.example'
