--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ sourceCompatibility = '1.8'
 
 rewrite {
 	activeRecipe('org.openrewrite.java.spring.boot2.SpringBoot2JUnit4to5Migration')
-	activeRecipe('org.openrewrite.java.migrate.Java8toJava11')
+	// activeRecipe('org.openrewrite.java.migrate.Java8toJava11')
 }
 
 repositories {
