内容の調整

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ sourceCompatibility = '1.8'
 
 rewrite {
 	activeRecipe('org.openrewrite.java.spring.boot2.SpringBoot2JUnit4to5Migration')
-	// activeRecipe('org.openrewrite.java.migrate.Java8toJava11')
+	activeRecipe('org.openrewrite.java.migrate.Java8toJava11')
 }
 
 repositories {
@@ -23,7 +23,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'junit:junit:4.12'
-	// rewrite("org.openrewrite.recipe:rewrite-spring:4.12.0")
+	rewrite("org.openrewrite.recipe:rewrite-spring:4.12.0")
 	rewrite("org.openrewrite.recipe:rewrite-migrate-java:0.9.0")
 }
 
